--- a/dogtor/templates/vet/pets/list.html
+++ b/dogtor/templates/vet/pets/list.html
@@ -11,10 +11,12 @@
 {% block content %}
 <table>
   <tr>
+    <th>ID</th>
     <th>Name</th>
   </tr>
   {% for pet in pets %}
   <tr>
+    <td>{{ pet.id }}</td>
     <td>{{ pet.name }}</td>
     {% comment %} <td>{{ pet.last_name }}</td> {% endcomment %}
   </tr>
