--- a/dogtor/templates/menu.html
+++ b/dogtor/templates/menu.html
@@ -1,9 +1,12 @@
-<nav>
-  <ul>
-    <li>
-      <a href="/vet/owners/">
-        Owners
-      </a>
-    </li>
-  </ul>
-</nav>
+<ul class="nav">
+  <li class="nav-item">
+    <a class="nav-link text-white" href="/vet/pets/">
+      Pets
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link text-white" href="/vet/owners/">
+      Owners
+    </a>
+  </li>
+</ul>
