--- a/dogtor/templates/vet/owners/update.html
+++ b/dogtor/templates/vet/owners/update.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}
 <h1>Dogs</h1>
@@ -11,7 +12,7 @@
 {% block content %}
 <form method="POST">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form|crispy }}
   <button type="submit">Actualizar dueño</button>
 </form>
 {% endblock content %}
