--- a/dogtor/templates/vet/pets/create.html
+++ b/dogtor/templates/vet/pets/create.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
 {% block title %}
 <h1>Pets</h1>
 {% endblock title %}
@@ -10,8 +11,8 @@
 
 {% block content %}
 <form method="POST">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Crear mascota</button>
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="submit">Crear mascota</button>
 </form>
 {% endblock content %}
