--- a/dogtor/templates/base.html
+++ b/dogtor/templates/base.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,46 +5,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   {% block title %}
-  <title>Happy pets</title>
+  <title>Dogtor</title>
   {% endblock title %}
 </head>
 
 <body>
-
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">Happy pets</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            {% include "menu.html" %}
-          </div>
-        </nav>
-      </div>
+  <header>
+    {% block header %}
+    <h1>Dogs</h1>
+    {% endblock header %}
+  </header>
+  <div>
+    <div>
+      {% include "menu.html" %}
     </div>
-
-    <div class="row">
-      <div class="col pt-4 pb-2">
-        {% block header %}
-        <h3>Happy pets</h3>
-        {% endblock header %}
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        {% block content %}
-        {% endblock content %}
-      </div>
+    <div>
+      {% block content %}
+      {% endblock content %}
     </div>
   </div>
-  <script src="{% static 'js/jquery.min.js' %}"></script>
-  <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 
 </html>
